--- a/style.css
+++ b/style.css
@@ -77,9 +77,9 @@ main .message {
   background: #E4EDF1;
   box-shadow: 2px 2px 2px 0px rgba(85, 85, 85, 0.50); 
   width: 273px;
-  height: 87px;
+  margin: 0;
   /* margin-top: 17px; */
-  padding: 27px;
+  padding: 10px;
 }
 main img {
   width: 250px;
